=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.20 - development

=over

=item *

Fixed bug where query string wasn't preserved when you had to login and it
tried to preserve the target destination after the login. [Michael Peters]

=item *

Fixed bug where some publish time exceptions were being silently
disguarded and the user would be left with a successful message even
though the item was never published. [Michael Peters]

=back

=head2 3.19 - April 13, 2012

=over

=item *

Don't convert hyphens in media filenames into underscores since hyphens
are valid in URLs and filenames. [Michael Peters]

=item *

Added C<no_anchor> option to L<Krang::Widget::autocomplete_values>.
[Michael Peters]

=item *

Fixing bug in template editor when code editor (CodePress) is on
that prevented edits after an initial "Save & Stay" from actually
saving. [Michael Peters]

=item *

After a successful login, if we were trying to get someplace else
originally redirect there instead of always taking the user to the
workspace. [Michael Peters]

=item *

L<Krang::FTP::Server> now logs properly in F<logs/krang.log>.
[Daniel S. Sterling]

=item *

L<Krang::FTP::Server> only call binmode utf8 for templates, not for media.
[Daniel S. Sterling]

=item *

C<story> is now passed to a top-level element's C<extension()> and
C<filename()> methods. [Michael Peters]

=item *

Fixed misspelling of F<krang_publish> C<--skip-related-assets> option.
[Michael Peters]

=back

=head2 3.18 - March, 08, 2012

=over

=item *

Templates can now be checked-out in bulk through the UI just like Stories
and Media. [Michael Peters]

=item *

Media Bulk Upload UI now remembers the last category that was used just
like the New Media screen. [Michael Peters]

=item *

Searching for media by filename no longer wild cards non-word characters
since those are important in file names (like ".") [Michael Peters]

=item *
